--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel": "^5.5.8",
     "babel-core": "^5.6.18",
     "babel-eslint": "^3.1.15",
+    "create-react-class": "^15.6.0",
     "eslint": "^0.23",
     "eslint-config-airbnb": "0.0.6",
     "eslint-plugin-react": "^2.3.0",
@@ -39,8 +40,9 @@
     "jsdom": "^7.2.2",
     "mocha": "^2.2.5",
     "mocha-jsdom": "^1.1.0",
-    "react": "^0.14.0-rc1",
+    "react": "^16.0.0-beta.3",
     "react-addons-test-utils": "^0.14.0-rc1",
+    "react-dom": "^16.0.0-beta.3",
     "rimraf": "^2.3.4"
   }
 }
